--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,5 +25,25 @@
 </main>
 
 <article class="article-main">
-  <h1 class="first-h1">Professional</h1>
+  <h1 class="first-h1" id="professional">Professional</h1>
+  <h2 class="first-h2">MY  PROGRAMMING  SKILL  LEVEL</h2>
+  <section class="profession-flex">
+    <div class="skill1"></div>
+    <div class="skill2"></div>
+    <div class="skill3"></div>
+    <div class="skill4"></div>
+    <div class="skill5"></div>
+    <div class="skill6"></div>
+    <div class="skill7"></div>
+  </section>
+  <h2 class="second-h2">MY SOFT SKILL LEVEL </h2>
+  <section class="profession-flex">
+    <div class="soft-skill1"></div>
+    <div class="soft-skill2"></div>
+    <div class="soft-skill3"></div>
+    <div class="soft-skill4"></div>
+    <div class="soft-skill5"></div>
+    <div class="soft-skill6"></div>
+    <div class="soft-skill7"></div>
+  </section>
 </article>
