--- a/views/layouts/layouts.ejs
+++ b/views/layouts/layouts.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue&family=Roboto Serif&family=Staatliches&Barlow Condensed">
-  <title>Liangbo Jin's Resume</title>
+  <title>Liangbo Jin's Website</title>
 </head>
 <body>
   <%- include ('../partitals/header') %>
