--- a/views/partitals/footer.ejs
+++ b/views/partitals/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-  <p class="small-font">© 2022 By Liangbo Jin. All Rights Reserved</p>
+  <p class="footer-text">© 2022 By Liangbo Jin. All Rights Reserved</p>
 </footer>
