--- a/views/partitals/header.ejs
+++ b/views/partitals/header.ejs
@@ -1,10 +1,10 @@
 <header class="header-wrapper">
-  <ul class="ul-flex-container">
+  <ul class="ul-flex-container" id="home">
     <li>
-      <a href="/">Home</a>
+      <a href="#home">Home</a>
     </li>
     <li>
-      <a href="/">Professional</a>
+      <a href="#professional">Professional</a>
     </li>
     <li>
       <a href="/">Education</a>
