--- a/public/stylesheets/shared/footer.css
+++ b/public/stylesheets/shared/footer.css
@@ -1,6 +1,6 @@
 :root{
   --main-font-family: "Barlow Condensed", sans-serif;
-  --main-color: #fff;
+  --main-color: rgb(0, 0, 0);
 }
 
 .footer-text{
@@ -8,4 +8,5 @@
   text-align: center;
   color: var(--main-color);
   font-weight: bold;
+  padding: 0.5rem;
 }
