--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,3 +47,18 @@
     <div class="soft-skill7"></div>
   </section>
 </article>
+
+<article class="contact-wrapper">
+  <section class="contact-flex">
+    <div class="contact-text">
+      <h2 id="contact">CONTACT ME</h2>
+    </div>
+    <div class="detail-icon detail-flex">
+      <p class="contact-name">Name: Liangbo Jin</p>
+      <p class="contact-tel">Tel: 0450063869</p>
+      <p class="contact-email">Email: <a href="mailto:wentworth_jin@outlook.com">wentworth_jin@outlook.com</a></p>
+      <p class="contact-linkedin">Linkedin: <a href="www.linkedin.com/in/LiangboJin">My Linkedin Link</a></p>
+      <p class="contact-github">Github: <a href="https://github.com/WentworthJin">My Github Link</a></p>
+    </div>
+  </section>
+</article>
