--- a/views/partitals/header.ejs
+++ b/views/partitals/header.ejs
@@ -13,7 +13,7 @@
       <a href="/">Projects</a>
     </li>
     <li>
-      <a href="/">Contact Me</a>
+      <a href="#contact">Contact Me</a>
     </li>
   </ul>
 </header>
