Finish Education timeline

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,39 @@
     <div class="soft-skill6"></div>
     <div class="soft-skill7"></div>
   </section>
+
+  
+  <section class="timeline-wrapper">
+    <h1 class="second-h1">Education</h1>
+    <h2 class="first-h2">MY STUDIES IN AUSTRALIA</h2>
+    <div class="container">
+      <div class="timeline">
+        <ul>
+          <li>
+            <div class="timeline-content">
+              <h3 class="date">Aug 2016 - June 2017</h3>
+              <h2>Trinity College Foundation Studies</h2>
+              <p>Trinity College, Melbourne, Australia.</p>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-content">
+              <h3 class="date">July 2017 - July 2020</h3>
+              <h2>Bachelor of Business (Logistics and Supply Chain Management) with Distinction</h2>
+              <p>RMIT University, Melbourne, Australia.</p>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-content">
+              <h3 class="date">July 2020 - Present</h3>
+              <h2>Master of Information Technology</h2>
+              <p>University of Western Australia, Perth, Australia.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </article>
 
 <article class="contact-wrapper">
@@ -56,9 +89,9 @@
     <div class="detail-icon detail-flex">
       <p class="contact-name">Name: Liangbo Jin</p>
       <p class="contact-tel">Tel: 0450063869</p>
-      <p class="contact-email">Email: <a href="mailto:wentworth_jin@outlook.com">wentworth_jin@outlook.com</a></p>
-      <p class="contact-linkedin">Linkedin: <a href="www.linkedin.com/in/LiangboJin">My Linkedin Link</a></p>
-      <p class="contact-github">Github: <a href="https://github.com/WentworthJin">My Github Link</a></p>
+      <p class="contact-email">Email: <a href="mailto:wentworth_jin@outlook.com" target="_blank">wentworth_jin@outlook.com</a></p>
+      <p class="contact-linkedin">Linkedin: <a href="https://www.linkedin.com/in/liangbojin/" target="_blank">My Linkedin Link</a></p>
+      <p class="contact-github">Github: <a href="https://github.com/WentworthJin" target="_blank">My Github Link</a></p>
     </div>
   </section>
 </article>
