--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,7 +3,9 @@
 @import 'shared/footer.css';
 @import 'shared/article1.css';
 @import 'shared/contact.css';
+@import 'shared/education.css';
 @import url("https://use.fontawesome.com/releases/v6.0.0/css/all.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 
 :root {
   --ritt:1px;
@@ -32,4 +34,11 @@ p{
 h1{
   padding: 0;
   margin: 0;
+  counter-reset: subheading;
 }
+
+h1:before {
+	content: "0"counter(heading)" ";
+	counter-increment: heading;
+}
+
