Finish projects section

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,7 @@
 @import 'shared/article1.css';
 @import 'shared/contact.css';
 @import 'shared/education.css';
+@import 'shared/project.css';
 @import url("https://use.fontawesome.com/releases/v6.0.0/css/all.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 
