--- a/public/stylesheets/shared/education.css
+++ b/public/stylesheets/shared/education.css
@@ -6,6 +6,7 @@
   --timeline-color: #DEB992;
   --background-color:#051622;
   --date-color: #FBC403;
+  --gpa-color: #228B22;
 
   --timeline-wrapper-margin-top: 5rem;
 
