--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
 
   
   <section class="timeline-wrapper">
-    <h1 class="second-h1">Education</h1>
+    <h1 class="second-h1" id="education">Education</h1>
     <h2 class="first-h2">MY STUDIES IN AUSTRALIA</h2>
     <div class="container">
       <div class="timeline">
@@ -65,6 +65,8 @@
             <div class="timeline-content">
               <h3 class="date">July 2017 - July 2020</h3>
               <h2>Bachelor of Business (Logistics and Supply Chain Management) with Distinction</h2>
+              <p>GPA: 3.4 / 4</p>
+              <br>
               <p>RMIT University, Melbourne, Australia.</p>
             </div>
           </li>
@@ -72,6 +74,8 @@
             <div class="timeline-content">
               <h3 class="date">July 2020 - Present</h3>
               <h2>Master of Information Technology</h2>
+              <p>Current GPA: 6.4 / 7</p>
+              <br>
               <p>University of Western Australia, Perth, Australia.</p>
             </div>
           </li>
