--- a/views/partitals/header.ejs
+++ b/views/partitals/header.ejs
@@ -1,19 +1,19 @@
 <header class="header-wrapper">
   <ul class="ul-flex-container" id="home">
     <li>
-      <a href="#home">Home</a>
+      <a href="/">Home</a>
     </li>
     <li>
-      <a href="#professional">Professional</a>
+      <a href="/#professional">Professional</a>
     </li>
     <li>
-      <a href="/">Education</a>
+      <a href="/#education">Education</a>
     </li>
     <li>
-      <a href="/">Projects</a>
+      <a href="/project">Projects</a>
     </li>
     <li>
-      <a href="#contact">Contact Me</a>
+      <a href="/#contact">Contact Me</a>
     </li>
   </ul>
 </header>
