--- a/views/project.ejs
+++ b/views/project.ejs
@@ -8,9 +8,14 @@
     </div>
     <div>
       <h2 class="description-h2">Unit Budget Planner</h2>
-      <p>Hello everyone,asdasd,qwdqwd,qwdqwd,sadas,dasd,</p>
-      <p class="my-role">My role is to design and implement SQL database</p>
-      <p class="used-technology">Used Technologies: React / SQL / </p>
+      <p>
+        A React Application that accepts excel files, stores required data in Sqlite Database, and present the 
+        data visualization for the head of the department, as well as helping them to track each unit's budget 
+        information.
+      </p>
+      <p class="my-role">My role is to design and implement SQL database (Including Documentation), 
+        building file upload function, and support data extraction using python</p>
+      <p class="used-technology">Used Technologies: <span>React</span> / <span>Sqlite</span> / <span>JS</span> / <span>Python</span> </p>
       <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Unit_Budget_Planner" target="_blank">Unit Budget Planner</a></p>
     </div>
   </article>
@@ -18,9 +23,14 @@
   <article class="project-wrapper">
     <div>
       <h2 class="description-h2">Unit Budget Planner</h2>
-      <p>Hello everyone,asdasd,qwdqwd,qwdqwd,sadas,dasd,</p>
-      <p class="my-role">My role is to design and implement SQL database</p>
-      <p class="used-technology">Used Technologies: React / SQL / </p>
+      <p>
+        A React Application that accepts excel files, stores required data in Sqlite Database, and present the 
+        data visualization for the head of the department, as well as helping them to track each unit's budget 
+        information.
+      </p>
+      <p class="my-role">My role is to design and implement SQL database (Including Documentation), 
+        building file upload function, and support data extraction using python</p>
+      <p class="used-technology">Used Technologies: <span>React</span> / <span>Sqlite</span> / <span>JS</span> / <span>Python</span> </p>
       <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Unit_Budget_Planner" target="_blank">Unit Budget Planner</a></p>
     </div>
     <div>
@@ -34,9 +44,14 @@
     </div>
     <div>
       <h2 class="description-h2">Unit Budget Planner</h2>
-      <p>Hello everyone,asdasd,qwdqwd,qwdqwd,sadas,dasd,</p>
-      <p class="my-role">My role is to design and implement SQL database</p>
-      <p class="used-technology">Used Technologies: React / SQL / </p>
+      <p>
+        A React Application that accepts excel files, stores required data in Sqlite Database, and present the 
+        data visualization for the head of the department, as well as helping them to track each unit's budget 
+        information.
+      </p>
+      <p class="my-role">My role is to design and implement SQL database (Including Documentation), 
+        building file upload function, and support data extraction using python</p>
+      <p class="used-technology">Used Technologies: <span>React</span> / <span>Sqlite</span> / <span>JS</span> / <span>Python</span> </p>
       <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Unit_Budget_Planner" target="_blank">Unit Budget Planner</a></p>
     </div>
   </article>
