--- a/public/stylesheets/shared/main.css
+++ b/public/stylesheets/shared/main.css
@@ -140,3 +140,9 @@
     padding: 1rem;
   }
 }
+
+@media only screen and (min-width: 1800px){
+  .liangbo-image{
+    background-size: calc(var(--main-background-image-size) * 1.2);
+  }
+}
