edit project page

--- a/views/project.ejs
+++ b/views/project.ejs
@@ -22,22 +22,19 @@
   <hr>
   <article class="project-wrapper">
     <div>
-      <h2 class="description-h2">Unit Budget Planner</h2>
+      <h2 class="description-h2">Teaching Website project</h2>
       <p>
-        A React Application that accepts excel files, stores required data in Sqlite Database, and present the 
-        data visualization for the head of the department, as well as helping them to track each unit's budget 
-        information.
+        A practical Flask Application that teaches basic information about the Swift language.  .
       </p>
-      <p class="my-role">My role is to design and implement SQL database (Including Documentation), 
-        building file upload function, and support data extraction using python</p>
-      <p class="used-technology">Used Technologies: <span>React</span> / <span>Sqlite</span> / <span>JS</span> / <span>Python</span> </p>
-      <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Unit_Budget_Planner" target="_blank">Unit Budget Planner</a></p>
+      <p class="my-role">My role is to design both frontend and backend, as well as implementing the SQL database. </p>
+      <p class="used-technology">Used Technologies: <span>Flask</span> / <span>SQL</span> / <span>JS</span> / <span>Python</span> </p>
+      <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Flask-Project" target="_blank">Teaching Website project</a></p>
     </div>
     <div>
-      <img src="/images/unit_budget_planner.png" alt="Unit Budget Planner overview">
+      <img src="/images/flask_project.jpg" alt="Flask Project overview">
     </div>
   </article>
-  <hr>
+  <!-- <hr>
   <article class="project-wrapper">
     <div>
       <img src="/images/unit_budget_planner.png" alt="Unit Budget Planner overview">
@@ -54,5 +51,5 @@
       <p class="used-technology">Used Technologies: <span>React</span> / <span>Sqlite</span> / <span>JS</span> / <span>Python</span> </p>
       <p class="github-icon">Github Link: <a href="https://github.com/WentworthJin/Unit_Budget_Planner" target="_blank">Unit Budget Planner</a></p>
     </div>
-  </article>
+  </article> -->
 </section>
