edit download button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,9 @@
     <span>Web Developer</span>
   </section>
 
-  <div class="main-button">
+  <!-- <div class="main-button">
     <button>Download Resume</button>
-  </div>
+  </div> -->
 </main>
 
 <article class="article-main">
