--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
           </li>
           <li>
             <div class="timeline-content">
-              <h3 class="date">July 2020 - Present</h3>
+              <h3 class="date">July 2020 - July 2022</h3>
               <h2>Master of Information Technology</h2>
               <p>Current GPA: 6.4 / 7</p>
               <br>
